--- a/examples/basic.html
+++ b/examples/basic.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>=^.^=</title>
 <style>
-body {background: url( "./img/bg.png" );}
+body {background: url( "./img/bg.png" ) fixed;}
 </style>
 </head>
 <body>
@@ -12,9 +12,9 @@ body {background: url( "./img/bg.png" );}
 
 <p>result</p>
 <canvas></canvas>
-<p>RGB Source</p>
+<p>Input 1: RGB source</p>
 <img src="./img/color.jpg" alt="">
-<p>Mask Source</p>
+<p>Input 2:Mask source</p>
 <img src="./img/alpha.jpg" alt="">
 
 <script src="../dist/jpeg-alpha.js"></script>
